Clean up test code + imports for Java 16